# exapy

./: README.md  flake.nix  justfile  pyproject.toml
exapy/: client.py  models.py
tests/: test_models.py
