[tool.poetry]
name = "exapy"
version = "0.1.0"
description = "async exaroton api wrapper"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/exapy"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.0"
pydantic = "^2.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
